--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
     "version": "1.0.0",
     "main": "server/server.js",
     "scripts": {
-        "start": "node server/server.js",
-        "server": "nodemon server/server.js",
-        "client": "cd client && npm run start",
-        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+        "server": "nodemon --quiet server",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "devDependencies": {
         "concurrently": "^8.2.2"
