--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "debug": "~2.6.9",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -28,5 +28,9 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "check-dependencies": "^2.0.0",
+    "nodemon": "^3.1.10"
   }
 }
