--- a/server/package.json
+++ b/server/package.json
@@ -27,10 +27,14 @@
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "check-dependencies": "^2.0.0",
     "nodemon": "^3.1.10"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.9"
   }
 }
